force-app/main/default/objects/ExecutionTrack__c/ExecutionTrack__c.object-meta.xml
<CustomObject>
    <label>Rastreio de Execução</label>
    <nameField>
        <displayFormat>RE-{0000000000}</displayFormat>
        <label>Rastreio de Execução</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rastreio de Execuções</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>