force-app/main/default/objects/ExecutionTrack__c/fields/AdjustmentExpire__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentExpire__c</fullName>
    <label>Validade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>