force-app/main/default/objects/ExecutionTrack__c/fields/AdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentType__c</fullName>
    <label>Tipo de Ajuste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>