force-app/main/default/objects/ExecutionTrack__c/fields/Braille__c.field-meta.xml
<CustomField>
    <fullName>Braille__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Braile?</label>
    <type>Checkbox</type>
</CustomField>