force-app/main/default/objects/ExecutionTrack__c/fields/ExecutedElement__c.field-meta.xml
<CustomField>
    <fullName>ExecutedElement__c</fullName>
    <label>Elemento Executado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>