force-app/main/default/objects/ExecutionTrack__c/fields/ExecutionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ExecutionDateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data/Hora da Execução</label>
    <type>DateTime</type>
</CustomField>