force-app/main/default/objects/ExecutionTrack__c/fields/ExecutionUser__c.field-meta.xml
<CustomField>
    <fullName>ExecutionUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário da Execução</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExecutionsTrack</relationshipName>
    <type>Lookup</type>
</CustomField>