force-app/main/default/objects/ExecutionTrack__c/fields/ExtractType__c.field-meta.xml
<CustomField>
    <fullName>ExtractType__c</fullName>
    <label>Tipo de Extrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>