force-app/main/default/objects/ExecutionTrack__c/fields/FormatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>FormatedDateTime__c</fullName>
    <formula>IF(HOUR(TIMEVALUE(CreatedDate)) - 3 &lt; 0, 
		IF(DAY(DATEVALUE(CreatedDate)) - 1 &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(DAY(DATEVALUE(CreatedDate)) - 1) + &quot;/&quot; +
  IF(MONTH(DATEVALUE(CreatedDate)) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(MONTH(DATEVALUE(CreatedDate))) + &quot;/&quot; +
  TEXT(YEAR(DATEVALUE(CreatedDate))) + &quot; &quot; +
  TEXT(24 - (HOUR(TIMEVALUE(CreatedDate)) - 3)) + &quot;:&quot; +
  IF(MINUTE(TIMEVALUE(CreatedDate)) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(MINUTE(TIMEVALUE(CreatedDate))),
			
		IF(DAY(DATEVALUE(CreatedDate)) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(DAY(DATEVALUE(CreatedDate))) + &quot;/&quot; +
  IF(MONTH(DATEVALUE(CreatedDate)) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(MONTH(DATEVALUE(CreatedDate))) + &quot;/&quot; +
  TEXT(YEAR(DATEVALUE(CreatedDate))) + &quot; &quot; +
  IF(HOUR(TIMEVALUE(CreatedDate)) - 3 &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(HOUR(TIMEVALUE(CreatedDate)) - 3) + &quot;:&quot; +
  IF(MINUTE(TIMEVALUE(CreatedDate)) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(MINUTE(TIMEVALUE(CreatedDate)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data/Hora Formatada</label>
    <type>Text</type>
</CustomField>