force-app/main/default/objects/ExecutionTrack__c/fields/FormatedEndDate__c.field-meta.xml
<CustomField>
    <fullName>FormatedEndDate__c</fullName>
    <formula>IF(NOT(ISBLANK(EndDate__c)),
    IF(DAY(EndDate__c) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(DAY(EndDate__c)) + &quot;/&quot; +
    IF(MONTH(EndDate__c) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(MONTH(EndDate__c)) + &quot;/&quot; +
    TEXT(YEAR(EndDate__c)), 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Final Formatada</label>
    <type>Text</type>
</CustomField>