force-app/main/default/objects/ExecutionTrack__c/fields/FormatedStartDate__c.field-meta.xml
<CustomField>
    <fullName>FormatedStartDate__c</fullName>
    <formula>IF(NOT(ISBLANK(StartDate__c)),
    IF(DAY(StartDate__c) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(DAY(StartDate__c)) + &quot;/&quot; +
    IF(MONTH(StartDate__c) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(MONTH(StartDate__c)) + &quot;/&quot; +
    TEXT(YEAR(StartDate__c)),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Inicial Formatada</label>
    <type>Text</type>
</CustomField>