force-app/main/default/objects/ExecutionTrack__c/fields/MSISDN__c.field-meta.xml
<CustomField>
    <fullName>MSISDN__c</fullName>
    <label>MSISDN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>