force-app/main/default/objects/ExecutionTrack__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <description>Used to storage &quot;Observação&quot; field from &quot;Sincronismo&quot; and &quot;Ajuste de saldo&quot; functions</description>
    <label>Observação</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>