force-app/main/default/objects/ExecutionTrack__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Período</label>
    <length>255</length>
    <type>Text</type>
</CustomField>