force-app/main/default/objects/ExecutionTrack__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Used to storage the &quot;Motivo&quot; field in &quot;Sincronismo&quot; and &quot;Ajuste de saldo&quot; functions</description>
    <label>Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>