force-app/main/default/objects/ExecutionTrack__c/fields/SendType__c.field-meta.xml
<CustomField>
    <fullName>SendType__c</fullName>
    <label>Tipo de Envio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>